cmake_minimum_required (VERSION 2.6)

option (NAME "The name of your plugin. MUST be all lower-case and have no dashes.")
if (NOT NAME)
    message (FATAL_ERROR "Please set a name for your plugin by passing -DNAME=\"your name\". MUST be all lower-case and  have no dashes.")
endif ()
string (TOUPPER ${NAME} NAME_CAPS)

configure_file ("CMakeLists.txt.in" "${NAME}/CMakeLists.txt" @ONLY)
configure_file ("config.h.in.in" "${NAME}/include/plugin_${NAME}/config.h.in")
configure_file ("plugin.c.in" "${NAME}/src/plugin_${NAME}.c" @ONLY)
configure_file ("plugin.h.in" "${NAME}/src/plugin_${NAME}.h" @ONLY)
configure_file ("events.h.in" "${NAME}/include/plugin_${NAME}/events.h" @ONLY)
configure_file ("events.c.in" "${NAME}/src/events.c" @ONLY)
configure_file ("services.h.in" "${NAME}/include/plugin_${NAME}/services.h" @ONLY)
configure_file ("services.c.in" "${NAME}/src/services.c" @ONLY)
